  modifier "irc_command_auth"), add default rmodifier "message_auth" (modifier
  "irc_message_auth")
* script: add option script.scripts.autoload, add options "autoload",
  "noautoload" and "toggleautoload" for command /script, add action "A" (meta-A)
  on script buffer (toggle autoload) (task #12393)
* scripts: do not allow empty script name in function "register"

Version 0.4.0 (2013-01-20)
--------------------------

* core: fix infinite loop when a regex gives an empty match (bug #38112)
* core: fix detection of guile in configure
* core: fix click in item "buffer_nicklist" when nicklist is a root bar
  (bug #38080)
* core: fix line returned when clicking on a bar (according to position and
  filling) (bug #38069)
* core: fix refresh of bars when applying layout (bug #37944, bug #37952)
* core: add buffer pointer in arguments for signals "input_search",
  "input_text_changed" and "input_text_cursor_moved"
* core: fix scroll to bottom of window (default key: alt+end) when line
  displayed is bigger than chat area
* core: fix scroll in buffer after enabling/disabling some filters (if scroll
  is on a hidden line) (bug #37885)
* core: fix memory leak in case of error when building content of bar item for
  display
* core: fix detection of command in input: a single command char is considered
  as a command (API function "string_input_for_buffer")
* core: search for a fallback template when a no template is matching command
  arguments
* core: add option "diff" for command /set (list options with changed value)
* core: fix refresh of windows after split (fix bug with horizontal separator
  between windows) (bug #37874)
* core: fix stuck mouse (bug #36533)
* core: fix default mouse buttons actions for script buffer (focus the window
  before executing action)
* core: add git version in build, display it in "weechat-curses --help" and
  /version
* core: fix scroll of one page down when weechat.look.scroll_page_percent is
  less than 100 (bug #37875)